2000-06-26  Per Bothner  <per@bothner.com>

	* Makefile.am:  Make some classes unconditionally (even if no swing).

2000-06-25  Per Bothner  <per@bothner.com>

	Moved some functions around, for the same of CommonLisp support.
	* ListOps.scm (car, cdr):  New functions; moved from MiscOps.scm.
	* SymbolOps.scm	(apply, prog1):  New functions; moved from MiscOps.scm.
	* MiscOps.scm (car, cdr, apply, prog1):  Removed.

	* lambda.java:  Nor inherits from kawa.lang.Lambda.
	(rewrite(Object,Translator)):  No longer needed.
	(rewrite(LambdaExp,Object,Object,Translator)):  Replaced by non-static
	rewriteBody method.
	* defun.java (lambdaSyntax):  New field.
	(rewriteFrom):  Use lambdaSyntax, instead of static lambda call.
	* ELisp.java:  Update appropriately.

2000-06-19  Per Bothner  <per@bothner.com>

	* AddOp.java:   Remove unneeded imports.
	* DivideOp.java:  Likewise.

	* ELisp.java (main):  New static method.

2000-06-18  Per Bothner  <per@bothner.com>

	* AddOp.java ($Mn):  New static method, implements unary minus.
	(applyN):  Call $Mn if unary minus.

	* MiscOps.scm (purecopy, minibuffer-depth):  New dummy definitions.
	(call-interactively, push):  New procedures.
	(car, cdr):  New procedures - handle nil as input.
	(format):  New procedure.
	(apply):  New procedure - handle symbol as function.
	(prog1):  New syntax.
	(quit-char):  New variable.
	
	* StringOps.scm (substring, char-to-string):  New procedures.

	* NumberOps.scm (1-, 1+, %):  Hardwire invoke-static calls.
	* NumberCompare.java (apply2):  Call ELisp.asNumber on operands.
	* ELisp.java (asNumber):  Handle javax.swing.text.Position.

	* ELisp.java (<init>):  Do some autoloads first, and then some
	after we have initialized variables symbols.
	Add definitions for new procedures and syntax.
	(getTypeFor):  New procedure.
	
	* ELisp.java (readableChar, readableString):  New helper functions.
	
	* UnwindProtect.java:  New class, extends Syntax.
	* defcustom.java:  New class, extends Syntax.